create recyclerview and its row item layout.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="_0">0</string>
     <string name="units">Units (Gallons,Cups, etc</string>
     <string name="date">Event Date</string>
+    <string name="take_photo">Take Photo</string>
+    <string name="save">Save</string>
+    <string name="event_thumbnail">Event Thumbnail</string>
 </resources>
